<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#616161"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/chatify"
            android:textColor="@color/textColorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="serif-monospace"
            />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="78dp"
            android:layout_height="45dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_logo" />

    </LinearLayout>

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/textColorPrimary" />


    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/textColorPrimary" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/textColorPrimary" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/textColorPrimary" />

    <EditText
        android:id="@+id/etRetypePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/textColorPrimary" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textColor="@color/textColorPrimary">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@color/textColorPrimary" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@color/textColorPrimary" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="@drawable/button_background"
        android:textColor="#FFF"
        android:layout_marginBottom="16dp"
        android:linksClickable="true"
        android:onClick="onSignUpClicked" />

    <TextView
        android:id="@+id/tvLoginNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:textColor="#FFF"
        android:clickable="true"
        android:focusable="true"
        android:autoLink="web"
        android:onClick="onLoginNowClicked" />



</LinearLayout>
